--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/grids-responsive-min.css">
+
     <link href="/css/site.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -11,6 +15,5 @@
       <p>please run <b>lein figwheel</b> in order to start the compiler</p>
     </div>
     <script src="/js/app.js" type="text/javascript"></script>
-    
   </body>
 </html>
